<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>primo-test</groupId>
  <artifactId>primo-test</artifactId>
  <version>0.0.1</version>
  <packaging>jar</packaging>

  <name>primo-test</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
	<repositories>
		<repository>
			<id>ex-libris</id>
			<url>http://il-vdc-mavenbuilds:7080/nexus/content/groups/public</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>ex-libris</id>
			<url>http://il-vdc-mavenbuilds:7080/nexus/content/groups/public</url>
			<releases>
				<enabled>true</enabled>
			</releases>
		</pluginRepository>
	</pluginRepositories>



	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>	
			
			<!-- Make this jar executable -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
				  <!-- DO NOT include log4j.properties file in your Jar -->
				  <excludes>
					<exclude>**/log4j.properties</exclude>
				  </excludes>
				  <archive>
					<manifest>
						<!-- Jar file entry point -->
						<mainClass>primo_test.ilsadaptors.TestILSURLCaller</mainClass>
					</manifest>
				  </archive>
				  <descriptorRefs>
          			<descriptorRef>jar-with-dependencies</descriptorRef>
        			</descriptorRefs>
				</configuration>
				<executions>
			    <execution>
			      <id>make-assembly</id> <!-- this is used for inheritance merges -->
			      <phase>package</phase> <!-- bind to the packaging phase -->
			      <goals>
			        <goal>single</goal>
			      </goals>
			    </execution>
			  </executions>
			</plugin>				
		</plugins>
		</build>
		


		<dependencies>
			<dependency>
				<groupId>com.exlibris</groupId>
				<artifactId>common</artifactId>
				<version>4.5.0</version>
			</dependency>
			<dependency>
				<groupId>com.exlibris.primo</groupId>
				<artifactId>primo-common-api</artifactId>
				<version>4.5.0</version>
			</dependency>
			<dependency>
				<groupId>com.exlibris.primo</groupId>
				<artifactId>primo-common-infra</artifactId>
				<version>4.5.0</version>
			</dependency>
			<dependency>
				<groupId>commons-httpclient</groupId>
				<artifactId>commons-httpclient</artifactId>
				<version>3.0</version>
			</dependency>		
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>4.2</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.8.2</version>
				<scope>test</scope>
			</dependency>			
			<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
			<dependency>
			    <groupId>org.apache.commons</groupId>
			    <artifactId>commons-text</artifactId>
			    <version>1.9</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
			<dependency>
			    <groupId>commons-lang</groupId>
			    <artifactId>commons-lang</artifactId>
			    <version>2.4</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/org.apache.xmlbeans/xmlbeans -->
			<dependency>
			    <groupId>org.apache.xmlbeans</groupId>
			    <artifactId>xmlbeans</artifactId>
			    <version>2.4.0</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
			<dependency>
			    <groupId>org.apache.logging.log4j</groupId>
			    <artifactId>log4j-core</artifactId>
			    <version>2.14.0</version>
			</dependency>
			
		</dependencies>
</project>
